--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
     <head>
         <link rel="stylesheet" type="text/css" href="mobile.css">
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <link href="https://fonts.googleapis.com/css?family=Archivo&display=swap" rel="stylesheet">
     </head>
     <body>
+<hr class="border">
+       <img src="img/001r.png">
+         <img src="img/rijschool.jpg">
+         
+<img class="icon" src="img/icons/car-side-solid.svg">
+           <h1>proefles</h1>
 
+           <hr>
+<p>weet u het nog niet zeker maar wilt u het toch even proberen bij FLEXi. Dat kan, want met een vrijblijvende intakeles zit jij nergens aan vast. Jij voelt meteen of er een klik is tussen jou en de rijinstructeur. Is er geen klik dan zijn er nog andere FLEXi rijinstructeurs. Ook bij andere rijinstructeurs geldt de vrijblijvende intakeles wel zo mooi.</p>
+<h1 class="border1">GRATIS proefles</h1>
+
+ <img class="icon" src="img/icons/map-solid.svg">
+
+<h1>locaties</h1>
+<hr>
+<p>Onze rijinstructeurs zijn verpreid over wel bijna heel Nederland. Er is dus altijd wel een rijinstructeur bij jou in de beurt. Is er bij jou in de buurt nog geen FLEXi rijschool.Bel dan even met ons. Wij kijken dan wel samen of we toch een FLEXi rijinstructeur voor jou kunnen regelen. Klik <span>hier</span> voor de locaties</p>
+
+<img class="icon" src="img/icons/graduation-cap-solid.svg">
+<h1>rijlessen</h1>
+<hr>
+<p>De rijlessen van FLEXi worden op basis van een instructiekaart voorbereid en uitgevoerd. Op de instructiekaart houdt de FLEXi rijinstructeur jouw vorderingenin de gaten. Ook gebruiken de meeste FLEXi rijinstructeurs een dashcam,zodat de les of een deel van de les teruggekeken wordt. Hier halen jij en jouw FLEXi rijinstructeur de pos en nav en bespreekt dit met jou </p>
+<hr>
+       
+  <img src="img/video.jpg">
   <title>mobile</title>
     </body>
 </html>
