--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     </head>
     <body>
 <hr class="border">
+
+<ul>
+    <li><img class="contact" scr="img/icons/phone-solid.svg">(06) --- --- --</li>
+    <li><img class="contact" scr="img/icons/whatsapp-brands.svg">(06) --- --- --</li>
+    <li><img class="contact" scr="img/icons/clock-regular.svg">Ma-Zo:8:00-22:00</li>
+    <li><img class="contact" scr="img/icons/tachometer-alt-solid.svg">Dashboard</li>
+    <li><a href=""><img class="social" src="img/icons/facebook-square-brands.svg"></a></li>
+    <li><a href=""><img class="social" src="img/icons/instagram-brands.svg"></a></li>
+    <li><a href=""><img class="social" src="img/icons/twitter-square-brands.svg"></a></li>
+</ul>
+
        <img src="img/001r.png">
-         <img src="img/rijschool.jpg">
+         <img class="bozemeneer"src="img/rijschool.jpg">
 
 
 <img class="icon" src="img/icons/car-side-solid.svg">
