--- a/index.html
+++ b/index.html
@@ -1,47 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
     <head>
         <link rel="stylesheet" type="text/css" href="mobile.css">
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <link href="https://fonts.googleapis.com/css?family=Archivo&display=swap" rel="stylesheet">
+        <title>mobile</title>
     </head>
     <body>
 <hr class="border">
-
-<ul>
-    <li><img class="contact" scr="img/icons/phone-solid.svg">(06) --- --- --</li>
-    <li><img class="contact" scr="img/icons/whatsapp-brands.svg">(06) --- --- --</li>
-    <li><img class="contact" scr="img/icons/clock-regular.svg">Ma-Zo:8:00-22:00</li>
-    <li><img class="contact" scr="img/icons/tachometer-alt-solid.svg">Dashboard</li>
-    <li><a href=""><img class="social" src="img/icons/facebook-square-brands.svg"></a></li>
-    <li><a href=""><img class="social" src="img/icons/instagram-brands.svg"></a></li>
-    <li><a href=""><img class="social" src="img/icons/twitter-square-brands.svg"></a></li>
+ <div id="knop">&#9776;</div>
+    <ul id="menu">
+    <li><img class="contact" src="img/icons/phone-solid.svg">(06) --- --- --</li>
+    <li><img class="contact" src="img/icons/whatsapp-brands.svg">(06) --- --- --</li>       
+    <li><img class="contact" src="img/icons/clock-regular.svg">Ma-Zo:8:00-22:00</li>
+    <li><img class="contact" src="img/icons/tachometer-alt-solid.svg">Dashboard</li>
+<li><a href=""><img class="social" src="img/icons/facebook-square-brands.svg"></a></li>
+<li><a href=""><img class="social" src="img/icons/instagram-brands.svg"></a></li>
+<li><a href=""><img class="social" src="img/icons/twitter-square-brands.svg"></a></li>
 </ul>
+
+ <div id="knop1">&#9776;</div>
+    <ul id="menu1">
+    <li><h1 class="bewijs" >autorijbewijs</li>
+    <li><h1 class="bewijs" >motorrijbewijs</li>   
+    <li><h1 class="bewijs">theorieles</li>
+    <li><h1 class="bewijs" >opfris cursus</li>
+        <li><h1 class="bewijs" >contact</li>
+
+</ul>
+
+
 
        <img src="img/001r.png">
          <img class="bozemeneer"src="img/rijschool.jpg">
 
+<div class="grid-container">
+<img class="icon1" src="img/icons/car-side-solid.svg"> 
 
-<img class="icon" src="img/icons/car-side-solid.svg">
-           <h1>proefles</h1>
+  <h1 class="proefles"> proefles</h1>
+        
 
            <hr>
-<p>weet u het nog niet zeker maar wilt u het toch even proberen bij FLEXi. Dat kan, want met een vrijblijvende intakeles zit jij nergens aan vast. Jij voelt meteen of er een klik is tussen jou en de rijinstructeur. Is er geen klik dan zijn er nog andere FLEXi rijinstructeurs. Ook bij andere rijinstructeurs geldt de vrijblijvende intakeles wel zo mooi.</p>
+<p class= "FLEXi1" >weet u het nog niet zeker maar wilt u het toch even proberen bij FLEXi. Dat kan, want met een vrijblijvende intakeles zit jij nergens aan vast. Jij voelt meteen of er een klik is tussen jou en de rijinstructeur. Is er geen klik dan zijn er nog andere FLEXi rijinstructeurs. Ook bij andere rijinstructeurs geldt de vrijblijvende intakeles wel zo mooi.</p>
 <h1 class="border1">GRATIS proefles</h1>
 
- <img class="icon" src="img/icons/map-solid.svg">
+ <img class="icon2" src="img/icons/map-solid.svg">
 
-<h1>locaties</h1>
+<h1 class="locaties">locaties</h1>
 <hr>
-<p>Onze rijinstructeurs zijn verpreid over wel bijna heel Nederland. Er is dus altijd wel een rijinstructeur bij jou in de beurt. Is er bij jou in de buurt nog geen FLEXi rijschool.Bel dan even met ons. Wij kijken dan wel samen of we toch een FLEXi rijinstructeur voor jou kunnen regelen. Klik <span>hier</span> voor de locaties</p>
+<p class= "FLEXi2">Onze rijinstructeurs zijn verpreid over wel bijna heel Nederland. Er is dus altijd wel een rijinstructeur bij jou in de beurt. Is er bij jou in de buurt nog geen FLEXi rijschool.Bel dan even met ons. Wij kijken dan wel samen of we toch een FLEXi rijinstructeur voor jou kunnen regelen. Klik <span>hier</span> voor de locaties</p>
 
-<img class="icon" src="img/icons/graduation-cap-solid.svg">
-<h1>rijlessen</h1>
+<img class="icon3" src="img/icons/graduation-cap-solid.svg">
+<h1 class="rijlessen">rijlessen</h1>
 <hr>
-<p>De rijlessen van FLEXi worden op basis van een instructiekaart voorbereid en uitgevoerd. Op de instructiekaart houdt de FLEXi rijinstructeur jouw vorderingenin de gaten. Ook gebruiken de meeste FLEXi rijinstructeurs een dashcam,zodat de les of een deel van de les teruggekeken wordt. Hier halen jij en jouw FLEXi rijinstructeur de pos en nav en bespreekt dit met jou </p>
+<p class= "FLEXi3">De rijlessen van FLEXi worden op basis van een instructiekaart voorbereid en uitgevoerd. Op de instructiekaart houdt de FLEXi rijinstructeur jouw vorderingenin de gaten. Ook gebruiken de meeste FLEXi rijinstructeurs een dashcam,zodat de les of een deel van de les teruggekeken wordt. Hier halen jij en jouw FLEXi rijinstructeur de pos en nav en bespreekt dit met jou </p>
 <hr>
        
-  <img src="img/video.jpg">
+  <img class="video"src="img/video.jpg">
   <title>mobile</title>
+  <script type="text/javascript" src="mobile.js"></script>
     </body>
 </html>
